--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint ./src/*",
     "test": "jest",
-    "ci": "npm run lint && npm run test -- --coverage"
+    "ci": "npm run lint && npm run test -- --coverage",
+    "pg": "npm test -- 'playground'"
   },
   "repository": {
     "type": "git",
@@ -36,14 +37,21 @@
     "@babel/cli": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@types/jest": "^24.0.15",
+    "jest": "^24.8.0",
+    "eslint-plugin-jest": "^22.7.1",
+    "prettier": "^1.18.2",
     "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jest": "^22.7.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.14.2",
-    "husky": "^2.5.0",
-    "jest": "^24.8.0"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^2.5.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eslint-plugin-html": "^6.0.0"
+  }
 }
