--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Algorithms and data-structures implemented on JavaScript",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./src/*",
+    "lint": "eslint ./src/playground/*",
     "test": "jest",
     "ci": "npm run lint && npm run test -- --coverage",
     "pg": "npm test -- 'playground'"
@@ -37,19 +37,21 @@
     "@babel/cli": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@types/jest": "^24.0.15",
-    "jest": "^24.8.0",
-    "eslint-plugin-jest": "^22.7.1",
-    "prettier": "^1.18.2",
     "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.18.2",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.7.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^2.5.0"
+    "husky": "^2.5.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "eslint-plugin-html": "^6.0.0"
