--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Algorithms and data-structures implemented on JavaScript",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./src/playground/*",
+    "lint": "eslint ./src/*",
     "test": "jest",
     "ci": "npm run lint && npm run test -- --coverage",
     "pg": "npm test -- 'playground'"
