--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,8 @@
     "no-lonely-if": "off",
     "class-methods-use-this": "off",
     "arrow-body-style": "off",
-    "no-loop-func": "off"
+    "no-loop-func": "off",
+    "linebreak-style": "off",
+    "semi": "off"
   }
 }
